Fixed picture sizing problem on mobile viewports

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1212,13 +1212,14 @@ fieldset {
   grid-template-rows: 46vw auto;
   background-color: black;
   width: 100%;
-  height: 100%;
+  height: auto;
   border-radius: 7px;
 }
 
 .car-media .main-img {
   width: 100%;
   height: 100%;
+  grid-row: 1/2;
   display: grid;
   grid-template-columns: 5% 90% 5%;
   grid-template-rows: 1fr;
@@ -1266,6 +1267,7 @@ fieldset {
   place-content: center;
   padding-bottom: 9px;
   margin-top: 2px;
+  z-index: 2;
 }
 
 .car-media .side-imgs img {
@@ -1549,6 +1551,10 @@ fieldset {
 }
 
 @media only screen and (max-width: 945px) {
+  .car-media .main-img .main-img-container img {
+    max-height: calc(97vw / 1.3);
+  }
+
   .card-technical-rows {
     flex-direction: column;
   }
@@ -1647,8 +1653,8 @@ fieldset {
     max-width: 120px;
   }
 
-  .car-media .side-imgs {
-    margin-top: 5px;
+  .side-imgs {
+    margin-top: 3px;
   }
 
   .specs-control {
@@ -1731,7 +1737,7 @@ fieldset {
   .car-media {
     grid-column: 1/3;
     grid-row: 1/2;
-    grid-template-rows: auto auto;
+    grid-template-rows: calc(100vw / 1.3) auto;
   }
   .car-technical {
     grid-column: 1/3;
@@ -1788,16 +1794,15 @@ fieldset {
   }
 
   .main-img-container {
-    aspect-ratio: 1.5;
     width: 100%;
-    place-content: center;
     grid-column: 1/4;
+    place-self: center;
+    place-content: center;
   }
 
   .car-media .main-img .main-img-container img {
     max-width: 100%;
-    height: auto;
-    max-height: 73vh;
+    place-self: center;
   }
 
   .car-description {
